--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,11 @@
     transform: rotate(360deg);
   }
 }
+
+.Custom-Header{
+  width: 100%;
+  display:grid;
+  place-items: center;
+  position: fixed;
+  top:15px;
+}
